# Patch-diffusion

./: README.md
dataset/cameraman/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/house/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/jetplane/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/lake/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/lena/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/livingroom/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/mandril/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/peppers/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/pirate/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/walkbridge/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/woman_blonde/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
dataset/woman_darkhair/: 0_05.tif  0_1.tif  0_15.tif  0_2.tif
diffusion/: CMakeLists.txt  main.cpp
